# brks_agents

./: QuantizingOpensourceModels.ipynb  README.md  Transformers.ipynb  finetuning.ipynb  items.py  multimodel_agents.ipynb  pyproject.toml  quantization.ipynb  quantizingopensourcemodels.ipynb  requirements.txt  text_summarization_beautifulSoup.ipynb
finetuning/: baselineModels.ipynb  data_prep.ipynb  items.py  loaders.py
finetuning/data/: test.pkl
