[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.58.2",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "datasets==3.6.0",
    "feedparser>=6.0.11",
    "gensim>=4.3.2",
    "google>=3.0.0",
    "google-genai>=1.26.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.38.0",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.10.3",
    "modal>=1.1.0",
    "numpy>=1.26.4",
    "ollama>=0.5.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "protobuf==3.20.2",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.13.1",
    "selenium>=4.34.2",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "undetected-chromedriver>=3.5.5",
]
